# particle-life-hsd

./: .gitignore  README.md  interaction.py  main.py  particles.py  pyproject.toml  requirements.txt  simulation.py
.github/workflows/: ci.yml
particle-life-hsd/: interaction.py  main.py  profiling.py  simulation.py  visualisation.py
particle-life-hsd/tests/: requirements.txt  test_interaction.py  test_particles.py  test_simulation.py
src/: profiling.py  requirements.txt
src/particle_life_simulator/: interaction.py  main.py  profiling.py  simulation.py  visualisation.py
tests/: conftest.py  test_interaction.py  test_particles.py  test_simulation.py
