[project]
name = "particle-life-hsd"
version = "0.1.0"
description = "Particle Life Simulation"
authors = [
    {name = "evran", email = "evran.baotatcheu@study.hs-duesseldorf.de"},
    {name = "maurice", email = "maurice.tay@study.hs-duesseldorf.de"},
    { name = "luan", email = "luan.jasari@study.hs-duesseldorf.de" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (<2.0.0)",
    "vispy (>=0.16.1,<0.17.0)",
    "pyqt6 (>=6.10.2,<7.0.0)",
    "numba (>=0.63.1,<0.64.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "pytest-cov"
]

[tool.poetry]
packages = [{include = "particle_life_simulator", from = "src"}]

[project.scripts]
particle-life = "particle_life_simulator.main:main"
